--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,21 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Ace Music"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlbumDetails"></activity>
-        <activity android:name=".PlayerActivity" />
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".PlayerActivity"/>
+        <activity android:name=".MainActivity"/>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/login"/>
+        <activity android:name=".RegisterActivity">
+
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,3 +31,9 @@
     </application>
 
 </manifest>
+
+
+
+
+
+
